Added new section to code

--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam, ad.</p>
         </div>
     </section>
+
+    <section>
+        <div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, animi?</p>
+        </div>
+    </section>
 </body>
 </html>
